--- a/Main_Code/Scopus_Search_WordCloud_Dash.ipynb
+++ b/Main_Code/Scopus_Search_WordCloud_Dash.ipynb
@@ -1839,30 +1839,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Launching server at http://localhost:58738\n"
+     "ename": "NameError",
+     "evalue": "name 'param' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-a88712934a37>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mword_dash\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mParameterized\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;31m# Word Count Slider\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mWord_Slider\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mInteger\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'param' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bokeh.server.server.Server at 0x20a1891b788>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "class search_scopus_dash(param.Parameterized):\n",
+    "    \n",
+    "    # Search Term Input to query search, default is \"Nanosafety\"\n",
+    "    Query  = param.String(default=\"Nanosafety\", doc=\"Insert query term(s)\")\n",
+    "    \n",
+    "    # Year range selection parameter for search\n",
+    "    Year_Range = param.Range((2005, 2010), bounds=(1970, 2021))\n",
+    "    \n",
+    "    # Action param to initiate search\n",
+    "    generate_sample_df = param.Action(lambda self: self.update_sample_df(), label=\"Generate Data\", doc=\"\"\"\n",
+    "      An action callback which will update the sample_df.\"\"\")\n",
+    "    \n",
+    "    # Dataframe param to store data from scopus search API\n",
+    "    sample_df = param.DataFrame()\n",
+    "    \n",
+    "    file_name = param.String(default=\"data.csv\", doc=\"\"\"\n",
+    "      The filename to save to.\"\"\")\n",
+    "    \n",
+    "    # Initiate desired parameters\n",
+    "    def __init__(self, **params):\n",
+    "        super().__init__(**params)\n",
+    "        self.search_request_funt()\n",
+    "        self.update_sample_df()        \n",
+    "        self.download = pn.widgets.FileDownload(name=\"Download Data\", filename=self.file_name, callback=self._download_callback, button_type=\"primary\")\n",
+    "        self.table = pn.widgets.DataFrame(self.sample_df, height=300)\n",
+    "        \n",
+    "    # Upate filename in download widget  \n",
+    "    @pn.depends('file_name', watch=True)\n",
+    "    def _update_filename(self):\n",
+    "        self.download.filename = self.file_name\n",
+    "    \n",
+    "    # Download function for excel file\n",
+    "    def _download_callback(self):\n",
+    "        \"\"\"\n",
+    "        A FileDownload callback will return a file-like object which can be serialized\n",
+    "        and sent to the client.\n",
+    "        \"\"\"\n",
+    "        self.download.filename = self.file_name\n",
+    "        sio = io.StringIO()\n",
+    "        self.sample_df.to_csv(sio, index=False)\n",
+    "        sio.seek(0)\n",
+    "        return sio\n",
+    "    \n",
+    "    \n",
+    "    # Scopus API search request function to generate dataframe with columns for date, title, and abstrast with queried search term b/t selected year range\n",
+    "    @param.depends('file_name', \"Query\", \"Year_Range\", watch=True)\n",
+    "    def search_request_funt(self):\n",
+    "    \n",
+    "        scopus_search_appended_df = pd.DataFrame()\n",
+    "    \n",
+    "        if self.Year_Range[0] == self.Year_Range[1]:\n",
+    "            date = str(self.Year_Range[0])\n",
+    "        else: \n",
+    "            date = str(self.Year_Range[0]) + \"-\" + str(self.Year_Range[1])\n",
+    "        # Declare necessary parameters for Scopus request API search tool\n",
+    "        cursor = \"*\"\n",
+    "        field = \"prism:coverDate,dc:title,dc:description\"\n",
+    "        url = \"http://api.elsevier.com/content/search/scopus?\"\n",
+    "        headers = {\"X-ELS-APIKey\": api_key, 'Accept':'application/json'}\n",
+    "        parameters = {\"query\": self.Query, \"view\": \"Complete\", \"date\": date, \"field\": field, \"cursor\": cursor}\n",
+    "        article_response = requests.get(url, headers=headers, params=parameters)\n",
+    "        article_response_json = article_response.json()\n",
+    "        total_results = int(article_response_json['search-results']['opensearch:totalResults'])\n",
+    "        # Loop to grab all API data\n",
+    "        while article_response_json['search-results'].get('entry') is not None:\n",
+    "            url = \"http://api.elsevier.com/content/search/scopus?\"\n",
+    "            parameters = {\"query\": self.Query, \"view\": \"Complete\", \"date\": date, \"field\": field, \"cursor\": cursor}\n",
+    "            article_response = requests.get(url, headers=headers, params= parameters)\n",
+    "            article_response_json = article_response.json()\n",
+    "            if article_response_json['search-results'].get('entry') is not None:\n",
+    "                scopus_articles_df = pd.DataFrame.from_dict(json_normalize(article_response_json, meta=[\"search-results\"], record_path=[\"search-results\", \"entry\"]), orient=\"columns\")\n",
+    "                date_title_description_df = scopus_articles_df[[\"prism:coverDate\", \"dc:title\", \"dc:description\"]]\n",
+    "                date_title_description_df.columns = ['Date','Title','Content']\n",
+    "                pd.to_datetime(date_title_description_df['Date'], format = \"%Y-%m-%d\")\n",
+    "                date_title_description_df.sort_values(by='Date')\n",
+    "                date_title_description_df = date_title_description_df.set_index('Date')\n",
+    "                scopus_search_appended_df = scopus_search_appended_df.append(date_title_description_df)\n",
+    "                cursor = article_response_json['search-results']['cursor']['@next']\n",
+    "        return scopus_search_appended_df\n",
+    "\n",
+    "    # Update dataframe with results\n",
+    "    @pn.depends('file_name', watch=True)\n",
+    "    def update_sample_df(self, event=None):\n",
+    "        self.sample_df = pd.DataFrame(self.search_request_funt())\n",
+    "        \n",
+    "    @pn.depends(\"sample_df\", watch=True)\n",
+    "    def _update_table(self):\n",
+    "        if hasattr(self, \"table\"):\n",
+    "            self.table.value = self.sample_df\n",
+    "            \n",
+    "    def save_sample_data(self, event=None):\n",
+    "        if not self.sample_df is None:\n",
+    "            self.sample_df\n",
+    "    \n",
+    "    def freq_plot_funt(self):\n",
+    "        scopus_search_appended_df = self.sample_df\n",
+    "        scopus_search_appended_df = scopus_search_appended_df.reset_index()\n",
+    "        scopus_search_appended_df['Date'] = pd.to_datetime(scopus_search_appended_df['Date'], format = \"%Y-%m-%d\")\n",
+    "        scopus_search_appended_year = scopus_search_appended_df.Date.dt.year.unique()\n",
+    "        scopus_search_appended_count = scopus_search_appended_df['Date'].groupby(scopus_search_appended_df.Date.dt.year).agg('count')\n",
+    "        scopus_search_appended_count_df = pd.DataFrame(scopus_search_appended_count)\n",
+    "        scopus_search_appended_count_df.columns = ['Count']\n",
+    "        scopus_search_appended_count_df = scopus_search_appended_count_df.reset_index() \n",
+    "        plot = scopus_search_appended_count_df.hvplot.line(title= \"Total Count per Year for the Word '\" + self.Query + \"' used in Academic Articles\", \n",
+    "                                    x = \"Date\", \n",
+    "                                    y = 'Count',\n",
+    "                                    invert = False, \n",
+    "                                    height = 600,\n",
+    "                                    width = 800\n",
+    "                                    )\n",
+    "        return plot\n",
+    "\n",
+    "\n",
+    "\n",
     "class word_dash(param.Parameterized):\n",
     "    \n",
     "    # Word Count Slider\n",
@@ -1945,25 +2054,6 @@
     "            \n",
     "                self.plotly_pane_title.object = fig_title\n",
     "                self.plotly_pane_content.object = fig_content\n",
-    "\n",
-    "    def frequency_plot(self):\n",
-    "        scopus = self.data\n",
-    "        text_title = scopus.Title.tolist()\n",
-    "        content_title = scopus.Content.tolist()\n",
-    "        text_title = ' '.join(text_title).lower()\n",
-    "        \n",
-    "        sw = set(stopwords.words('english'))\n",
-    "        sw_addons = {'inf', 'nano', 'based', 'effect', 'impact', ''}\n",
-    "        wordcloud = WordCloud(stopwords = sw.union(sw_addons),\n",
-    "                              collocations=True).generate(text_title)\n",
-    "\n",
-    "        text_dictionary = wordcloud.process_text(text_title)\n",
-    "        word_freq={k: v for k, v in sorted(text_dictionary.items(),reverse=True, key=lambda item: item[1])}\n",
-    "        word_freq\n",
-    "            \n",
-    "\n",
-    "                \n",
-    "                \n",
     "                \n",
     "    def view(self):\n",
     "        return pn.Column(pn.Row(pn.Column(\"*Select the saved excel data file here*\", self.File_Input), \n",
@@ -2003,13 +2093,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `CountVectorizer` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "?CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_1 = [('re', 148), ('make', 117), ('ve', 106), ('said', 95), ('able', 88)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('re', 148), ('make', 117), ('ve', 106), ('said', 95), ('able', 88)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1"
    ]
   },
   {
@@ -2024,18 +2158,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "list_1 = [('re', 148), ('make', 117), ('ve', 106), ('said', 95), ('able', 88)]\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "list_1"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
