--- a/Main_Code/WordCloud_Dash.ipynb
+++ b/Main_Code/WordCloud_Dash.ipynb
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -1847,16 +1847,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:58841\n"
+      "Launching server at http://localhost:59387\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bokeh.server.server.Server at 0x1faf8e623c8>"
+       "<bokeh.server.server.Server at 0x25d699d0588>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,6 +1947,7 @@
     "                    self.plotly_pane_content.object = fig_content\n",
     "                \n",
     "                elif self.cloud_select == 'Frequency WordCloud':\n",
+    "                    scopus = scopus.astype(str)\n",
     "                    # Set stopwords\n",
     "                    sw = set(stopwords.words('english'))\n",
     "                    wordlist = re.sub(\"[^\\w]\", \" \",  self.Text_Input).split()\n",
@@ -1961,7 +1962,7 @@
     "                    fit_title = cv_title.fit_transform(corpus_title)\n",
     "                    fit_content = cv_content.fit_transform(corpus_content)\n",
     "                    fit_title = fit_title.toarray()\n",
-    "                    fit_content = fit_title.toarray()\n",
+    "                    fit_content = fit_content.toarray()\n",
     "                    # Create dataframes from cv transformed data\n",
     "                    title_df = pd.DataFrame(fit_title, columns = cv_title.get_feature_names())\n",
     "                    content_df = pd.DataFrame(fit_content, columns = cv_content.get_feature_names())\n",
@@ -1969,8 +1970,8 @@
     "                    text_title = title_df.loc[0].sort_values(ascending=False)\n",
     "                    text_content = content_df.loc[0].sort_values(ascending=False)\n",
     "                    # Set max most freqent words to plot\n",
-    "                    text__title_top = text_title[:self.Word_Slider]\n",
-    "                    text__content_top = text_content[:self.Word_Slider]\n",
+    "                    text_title_top = text_title[:self.Word_Slider]\n",
+    "                    text_content_top = text_content[:self.Word_Slider]\n",
     "                    # Create Frequency WordCloud\n",
     "                    wordcloud = WordCloud(min_word_length =3, background_color='white')\n",
     "                    title_wc = wordcloud.generate_from_frequencies(text_title_top)\n",
@@ -1991,12 +1992,13 @@
     "                    self.plotly_pane_content.object = fig_content_2\n",
     "                    \n",
     "                elif self.cloud_select == 'Frequency Plot':\n",
+    "                    scopus = scopus.astype(str)\n",
     "                    # Set stopwords\n",
     "                    sw = set(stopwords.words('english'))\n",
     "                    wordlist = re.sub(\"[^\\w]\", \" \",  self.Text_Input).split()\n",
     "                    sw_addons = {'inf', 'nano', 'based', 'effect', 'impact'}\n",
     "                    sw_addons.update(wordlist)\n",
-    "                     # Make corpus in list form\n",
+    "                    # Make corpus in list form\n",
     "                    corpus_title = [' '.join(scopus.Title.tolist()) for row in scopus]\n",
     "                    corpus_content = [' '.join(scopus.Content.tolist()) for row in scopus]\n",
     "                    # Use countvectorizer to analyze corpus\n",
@@ -2005,7 +2007,7 @@
     "                    fit_title = cv_title.fit_transform(corpus_title)\n",
     "                    fit_content = cv_content.fit_transform(corpus_content)\n",
     "                    fit_title = fit_title.toarray()\n",
-    "                    fit_content = fit_title.toarray()\n",
+    "                    fit_content = fit_content.toarray()\n",
     "                    # Create dataframes from cv transformed data\n",
     "                    title_df = pd.DataFrame(fit_title, columns = cv_title.get_feature_names())\n",
     "                    content_df = pd.DataFrame(fit_content, columns = cv_content.get_feature_names())\n",
@@ -2046,8 +2048,8 @@
     "                                 \"throttled\": True,\n",
     "                             }\n",
     "                         })),\n",
-    "                         pn.Row(pn.Column(pn.Card(self.plotly_pane_title, title = \"WordCloud of Titles\", background='WhiteSmoke')),\n",
-    "                                pn.Column(pn.Card(self.plotly_pane_content, title = \"WordCloud of Abstracts\", background='WhiteSmoke')\n",
+    "                         pn.Row(pn.Column(pn.Card(self.plotly_pane_title, title = \"Titles\", background='WhiteSmoke')),\n",
+    "                                pn.Column(pn.Card(self.plotly_pane_content, title = \"Abstracts\", background='WhiteSmoke')\n",
     "                                          ))\n",
     "                        )\n",
     "        \n",
