--- a/Main_Code/WordCloud_Dash.ipynb
+++ b/Main_Code/WordCloud_Dash.ipynb
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -1847,16 +1847,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:59387\n"
+      "Launching server at http://localhost:53490\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bokeh.server.server.Server at 0x25d699d0588>"
+       "<bokeh.server.server.Server at 0x2d8fa954908>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
