--- a/Main_Code/Scopus_Search_WordCloud_Dash.ipynb
+++ b/Main_Code/Scopus_Search_WordCloud_Dash.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -61,16 +61,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching server at http://localhost:51952\n"
+      "Launching server at http://localhost:55472\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bokeh.server.server.Server at 0x1c2027a0ac8>"
+       "<bokeh.server.server.Server at 0x1c20390a3c8>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
